@@ -1,3 +1,8 @@
+2004-12-15  Jonathan Pryor <jonpryor@vt.edu>
+
+	* Syscall.cs: Fix the sys_kill and sys_crypt declarations.
+	* CdeclFunction.cs: Document calling convention problems on AMD64.
+
 2004-11-18  Jonathan Pryor <jonpryor@vt.edu>
 
 	* CdeclFunction.cs: Added.
